# cicd

./: .gitignore  MODULE.bazel  extension_for_com_adobe_rules_gitops.bzl  non_module_deps.bzl
helloworld/: BUILD  helloworld.go  helloworld_test.go
