
bazel_dep(name = "rules_go", version = "0.39.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "bazel_skylib", version = "1.4.1")
# -- bazel_dep definitions -- #

non_module_deps = use_extension("//:non_module_deps.bzl", "non_module_deps")
use_repo(non_module_deps, "com_adobe_rules_gitops")
use_repo(non_module_deps, "io_bazel_rules_docker")
# End of extension `non_module_deps`

extension_for_com_adobe_rules_gitops = use_extension("//:extension_for_com_adobe_rules_gitops.bzl", "extension_for_com_adobe_rules_gitops")
use_repo(extension_for_com_adobe_rules_gitops, "kustomize_bin")
# End of extension `extension_for_com_adobe_rules_gitops`
